crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__trivia__tests__identifier_ending_in_non_start_char.snap
---
source: crates/ruff_python_formatter/src/trivia.rs
expression: test_case.tokens()
---
[
    Token {
        kind: Other,
        range: 0..2,
    },
]
