crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__trivia__tests__ignore_word_with_only_id_continuing_chars.snap
---
source: crates/ruff_python_formatter/src/trivia.rs
expression: test_case.tokens()
---
[
    Token {
        kind: Other,
        range: 0..1,
    },
    Token {
        kind: Bogus,
        range: 1..2,
    },
    Token {
        kind: Bogus,
        range: 2..3,
    },
]
