crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__trivia__tests__tokenize_bogus.snap
---
source: crates/ruff_python_formatter/src/trivia.rs
expression: test_case.tokens()
---
[
    Token {
        kind: Comment,
        range: 0..17,
    },
    Token {
        kind: Newline,
        range: 17..18,
    },
    Token {
        kind: Whitespace,
        range: 18..26,
    },
    Token {
        kind: Other,
        range: 26..27,
    },
    Token {
        kind: Bogus,
        range: 27..28,
    },
    Token {
        kind: Bogus,
        range: 28..29,
    },
    Token {
        kind: Bogus,
        range: 29..30,
    },
    Token {
        kind: Bogus,
        range: 30..31,
    },
    Token {
        kind: Bogus,
        range: 31..32,
    },
    Token {
        kind: Bogus,
        range: 32..33,
    },
    Token {
        kind: Bogus,
        range: 33..34,
    },
    Token {
        kind: Bogus,
        range: 34..35,
    },
    Token {
        kind: Bogus,
        range: 35..36,
    },
    Token {
        kind: Bogus,
        range: 36..37,
    },
    Token {
        kind: Bogus,
        range: 37..38,
    },
    Token {
        kind: Bogus,
        range: 38..39,
    },
    Token {
        kind: Bogus,
        range: 39..40,
    },
    Token {
        kind: Bogus,
        range: 40..41,
    },
    Token {
        kind: Bogus,
        range: 41..42,
    },
    Token {
        kind: Bogus,
        range: 42..43,
    },
    Token {
        kind: Bogus,
        range: 43..44,
    },
    Token {
        kind: Bogus,
        range: 44..45,
    },
    Token {
        kind: Bogus,
        range: 45..46,
    },
    Token {
        kind: Bogus,
        range: 46..47,
    },
    Token {
        kind: Bogus,
        range: 47..48,
    },
    Token {
        kind: Bogus,
        range: 48..49,
    },
    Token {
        kind: Bogus,
        range: 49..50,
    },
    Token {
        kind: Bogus,
        range: 50..51,
    },
    Token {
        kind: Bogus,
        range: 51..52,
    },
    Token {
        kind: Bogus,
        range: 52..53,
    },
]
