crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__trivia__tests__tokenize_colon.snap
---
source: crates/ruff_python_formatter/src/trivia.rs
expression: test_case.tokens()
---
[
    Token {
        kind: Colon,
        range: 0..1,
    },
    Token {
        kind: Colon,
        range: 1..2,
    },
    Token {
        kind: Colon,
        range: 2..3,
    },
]
