crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__trivia__tests__tokenize_substring.snap
---
source: crates/ruff_python_formatter/src/trivia.rs
expression: tokens
---
[
    Token {
        kind: RParen,
        range: 14..15,
    },
    Token {
        kind: Whitespace,
        range: 15..16,
    },
    Token {
        kind: Comment,
        range: 16..25,
    },
]
